--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ nav ul li a {
             <div class="speed-test-container">
                 <div class="speed-test-box">
                     <div class="speed-test-header">
-                        <h3>Uji Kecepatan Jaringan Anda</h3>
+                        <h3>Uji Kecepatan Jaringan 5G Anda</h3>
                         <p>Ukur kecepatan unduh, unggah, dan ping jaringan Anda secara real-time</p>
                     </div>
                     
