--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ nav ul li a {
     <section class="promo-section">
         <div class="container">
             <div class="section-title">
-                <h2><img src="./image/logo super seru.png" alt="" style="max-width : 475px; width: 100%;" ></h2>
+                <h2><img src="./image/logo super seru.png" alt="" style="max-width : 475px; width: 100%; height: auto;" ></h2>
             </div>
             <div class="grid-promo">
                 
